--- a/preamble.tex
+++ b/preamble.tex
@@ -139,6 +139,10 @@
 \newcommand*{\transpose}{{}^\text{T}}
 
 % GP terms
+\newcommand*{\goodset}{\psi_\mathbf{g}}
+\newcommand*{\badset}{\psi_\mathbf{b}}
+\newcommand*{\wonkyset}{\psi_\mathbf{w}}
+\newcommand*{\punishset}{\psi_\mathbf{p}}
 
 
 \title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.3.0+changes \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.3.0+changes \today}}
