--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -28,12 +28,12 @@ The state serialization is then defined as the dictionary built from the amalgam
       1\ &\when \gamma_\mathbf{s} \in \seq{\H_B}_\mathsf{E}\\
     \end{aligned}\right\}, \gamma_\mathbf{s},
     \var{\gamma_\mathbf{a}}}\right) \;, \\
-    &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \psi_\mathbf{a}}}, \var{\orderby{x}{x \in \psi_\mathbf{b}}}, \var{\orderby{x}{x \in \psi_\mathbf{p}}}) \;, \\
+    &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \goodset}}, \var{\orderby{x}{x \in \badset}}, \var{\orderby{x}{x \in \wonkyset}}, \var{\orderby{x}{x \in \punishset}}) \;, \\
     &&C(6) &\mapsto \se(\eta) \;, \\
     &&C(7) &\mapsto \se(\iota) \;, \\
     &&C(8) &\mapsto \se(\kappa) \;, \\
     &&C(9) &\mapsto \se(\lambda) \;, \\
-    &&C(10) &\mapsto \se([\maybe{(w, \var{\mathbf{g}}, \se_4(t))} \mid (w, t, \mathbf{g}) \orderedin \rho]) \;, \\
+    &&C(10) &\mapsto \se([\maybe{(w, \se_4(t))} \mid (w, t) \orderedin \rho]) \;, \\
     &&C(11) &\mapsto \se_4(\tau) \;, \\
     &&C(12) &\mapsto \se_4(\chi) \;, \\
     &&C(13) &\mapsto \se_4(\pi) \;, \\
