Faults include complete preverification info

--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -99,12 +99,12 @@ With a new epoch under regular conditions, validator keys get rotated and the ep
   \end{cases} \\
   \nonumber \where z &= \mathcal{O}([k_b \mid k \orderedin \gamma'_\mathbf{k}]) \\
   \label{eq:blacklistfilter} \Phi(\mathbf{k}) &\equiv \sq{
-    \begin{rcases}[0, 0, \dots] &\when k_b \in \psi'_\mathbf{p} \\ k &\otherwise \end{rcases}
+    \begin{rcases}[0, 0, \dots] &\when k_b \in \punishset' \\ k &\otherwise \end{rcases}
     \,\middle\mid\, k \orderedin \mathbf{k}
   }
 \end{align}
 
-Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the judgement punish set $\psi'_\mathbf{p}$ are replaced with a null key containing only zeroes. The origin of this punish set is explained in section \ref{sec:verdicts}.
+Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the judgement punish set $\punishset'$ are replaced with a null key containing only zeroes. The origin of this punish set is explained in section \ref{sec:verdicts}.
 
 
 
