--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -12,7 +12,7 @@ As mentioned, recording reports found to have a high confidence of invalidity is
 
 \subsection{The Good, the Bad and the Wonky}
 
-The verdicts state includes four items, a good-set ($\goodset$), a bad-set ($\badset$) and a wonky-set ($\psi_\mathbf{w}$), as well as a punish-set ($\punishset$). The good-set, bad-set and wonky-set contains the hashes of all work-reports which were respectively judged to be correct, incorrect or that it appears impossible to judge. The punish-set is a set of Ed25519 keys representing validators which were found to have misjudged a work-report.
+The verdicts state includes four items, a good-set ($\goodset$), a bad-set ($\badset$) and a wonky-set ($\wonkyset$), as well as a punish-set ($\punishset$). The good-set, bad-set and wonky-set contains the hashes of all work-reports which were respectively judged to be correct, incorrect or that it appears impossible to judge. The punish-set is a set of Ed25519 keys representing validators which were found to have misjudged a work-report.
 \begin{equation}
   \psi \equiv \tup{\goodset, \badset, \wonkyset, \punishset}
 \end{equation}
@@ -27,7 +27,7 @@ The verdict extrinsic, $\mathbf{E}_V$ may contain one or more verdicts $\mathbf{
     \mathbf{E}_V &\equiv (\mathbf{v}, \mathbf{c}, \mathbf{f}) \\
     \where \mathbf{v} &\in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
     \also \mathbf{c} &\in \seq{\H, \H_E, \mathbb{E}} \,,\quad
-    \mathbf{f} \in \seq{\H, \H_E, \mathbb{E}}
+    \mathbf{f} \in \seq{\H, \{\top,\bot\}, \H_E, \mathbb{E}}
   \end{aligned}
 \end{equation}
 
@@ -45,25 +45,24 @@ All judgement signatures must be valid in terms of one of the two allowed valida
 
 Culprit and fault signatures must be similarly valid and reference work-reports with judgements and may not report targets which are already in the punish-set:
 \begin{align}
-  &\begin{aligned}
-      &\forall (r, k, s) \in \mathbf{c} :\\
-      &\quad r \in \varphi'_\mathbf{b} \cup \varphi'_\mathbf{c} \wedge
-      k \in (\lambda \cup \kappa) \setminus \varphi_\mathbf{p} \wedge
-      s \in \sig{k}{\mathsf{X}_G \frown r}
-  \end{aligned}\\
-  &\begin{aligned}
-      &\forall (r, k, s) \in \mathbf{f} :\\
-      &\quad r \in \varphi'_\mathbf{a} \cup \varphi'_\mathbf{c} \wedge
-      k \in (\lambda \cup \kappa) \setminus \varphi_\mathbf{p} \wedge
-      s \in \sig{k}{\mathsf{X}_{r \in \varphi'_\mathbf{c}} \concat r}\\
-  \end{aligned}
+  \forall (r, k, s) &\in \mathbf{c} : \bigwedge \left\{
+  \begin{aligned}
+    &r \in \badset' \,,\\
+    &k \in (\lambda \cup \kappa) \setminus \punishset \,,\\
+    &s \in \sig{k}{\mathsf{X}_G \frown r}
+  \end{aligned}\right.\\
+  \forall (r, v, k, s) &\in \mathbf{f} : \bigwedge \left\{ \begin{aligned}
+    &r \in \badset' \Leftrightarrow r \not\in \goodset' \Leftrightarrow v \,,\\
+    &k \in (\lambda \cup \kappa) \setminus \punishset \,,\\
+    &s \in \sig{k}{\mathsf{X}_v \concat r}\\
+  \end{aligned}\right.
 \end{align}
 
 Verdicts $\mathbf{v}$ must be ordered by report hash. Offender signatures $\mathbf{c}$ and $\mathbf{f}$ must be ordered by the validator's Ed25519 key. There may be no duplicate report hashes within the extrinsic, nor amongst any past reported hashes. Formally:
 \begin{align}
   &\mathbf{v} = \orderuniqby{r}{\tup{r, a, \mathbf{v}} \in \mathbf{v}}\\
   &\mathbf{c} = \orderuniqby{k}{\tup{r, k, s} \in \mathbf{v}} \,,\quad
-  \mathbf{f} = \orderuniqby{k}{\tup{r, k, s} \in \mathbf{v}}\\
+  \mathbf{f} = \orderuniqby{k}{\tup{r, v, k, s} \in \mathbf{v}}\\
   &\{r \mid \tup{r, a, \mathbf{v}} \in \mathbf{v}\} \disjoint \goodset \cup \badset \cup \wonkyset
 \end{align}
 
@@ -100,7 +99,7 @@ The good-set, bad-set and wonky-set assimilate the hashes of any reports we judg
   \goodset' &\equiv \goodset \cup \{r \mid \tup{r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1} \in \mathbf{J} \} \\
   \badset' &\equiv \badset \cup \{r \mid \tup{r, 0} \in \mathbf{J} \} \\
   \wonkyset' &\equiv \wonkyset \cup \{r \mid \tup{r, \floor{\nicefrac{1}{3}\mathsf{V}}} \in \mathbf{J} \} \\
-  \punishset' &\equiv \punishset \cup \{ k \mid (r, k, s) \in \mathbf{c} \cup \mathbf{f} \}
+  \punishset' &\equiv \punishset \cup \{ k \mid (r, k, s) \in \mathbf{c} \}\cup \{ k \mid (r, v, k, s) \in \mathbf{f} \}
 \end{align}
 
 \subsection{Header}\label{sec:judgementmarker}
