--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -106,19 +106,22 @@ The underlying function for our Merkle trees is the \emph{node} function $N$, wh
     (\mathbf{v}, H) &\mapsto \begin{cases}
       \H_0 &\when |\mathbf{v}| = 0 \\
       \mathbf{v}_0 &\when |\mathbf{v}| = 1 \\
-      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}}) \concat N(\mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots})) &\otherwise
+      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}}, H) \concat N(\mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots}, H)) &\otherwise
     \end{cases}
   \end{aligned}\right.\label{eq:merklenode}
 \end{equation}
 
-The astute reader will realize that if our $\Y_n$ happens to be equivalent $\H$ then this function will always evaluate into $\H$. That said, for it to be secure care must be taken to ensure there is no possibility preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
+The astute reader will realize that if our $\Y_n$ happens to be equivalent $\H$ then this function will always evaluate into $\H$. That said, for it to be secure care must be taken to ensure there is no possibility of preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
 
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
   \begin{aligned}
     T\colon\left\{\begin{aligned}
       (\seq{\Y_n}, \N_{|\mathbf{v}|}, \Y \to \H)\ &\to \seq{\Y_n \cup \H}\\
-      (\mathbf{v}, i, H) &\mapsto [N(P^\bot(\mathbf{v}, i))] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H)
+      (\mathbf{v}, i, H) &\mapsto \begin{cases}
+        [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when |\mathbf{v}| > 1\\
+        [] &\otherwise
+      \end{cases}
     \end{aligned}\right.\\
     \where\ \left\{\begin{aligned}
       P^s(\mathbf{v}, i) &\equiv \begin{cases}
